<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginText_firstMeet"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/edittext_email"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textPassword"
            android:inputType="textPassword"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_email" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_checkUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:hint="@string/login_keepGoing"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/edittext_email"/>


        <Button
            android:id="@+id/button_logInForKakao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_kakao"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/button_loginForFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_facebook"
            app:layout_constraintTop_toBottomOf="@id/button_logInForKakao" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
